--- a/index.html
+++ b/index.html
@@ -39,9 +39,14 @@
    </div>
  <script>
    $( document ).ready(() => {
-    console.log('hi');
+     addMessages({name: "Adeyemi", message: "This is me"})
     
 });
+function addMessages(message){
+    $("#messages").append(`<h4 class="userName"> ${message.name} </h4> <p> ${message.message}</p>`)
+}
+
+
  </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
